--- a/Lesson 7/Homework/hmw_l7.ipynb
+++ b/Lesson 7/Homework/hmw_l7.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
     "    cropped_image = image[y:y + (h_25*2), x:x + (w_25*2)]\n",
     "    return cropped_image\n",
     "\n",
-    "def extract_features_from_frame(frame_data, image):\n",
+    "def extract_feature(frame_data, image):\n",
     "    features = []\n",
     "    for player_data in frame_data.values():\n",
     "        bbox = player_data['box']\n",
@@ -180,9 +180,7 @@
     "    avg_accuracy = (total_accuracy / total_frames) *100\n",
     "    return avg_accuracy\n",
     "\n",
-    "\n",
-    "\n",
-    "def extract_features_from_histogram(frame_data, image):\n",
+    "def extract_features_hist(frame_data, image):\n",
     "    features = []\n",
     "    for player_data in frame_data.values():\n",
     "        bbox = player_data['box']\n",
@@ -193,7 +191,6 @@
     "        #print(avg_color)\n",
     "        features.append(avg_color)\n",
     "    return features\n",
-    "\n",
     "\n",
     "def get_rgb_average_histogram(img):\n",
     "    bins=8\n",
@@ -210,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
@@ -308,54 +305,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Задача №1"
+    "# Задача №1,2,3,4"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Обучение модели k-means"
+    "### Создание Ground True словаря"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_features = []\n",
-    "\n",
-    "# Извлечение вектора признаков из bounding box`в всех фреймов\n",
-    "for frame_id, frame_data in data.items():\n",
-    "    features = []\n",
-    "    image_path = f'team_classification_data/frames/{frame_id}.jpeg'\n",
-    "    # Получаю изображение\n",
-    "    rgb_image = get_rbg_image_from_path(image_path)\n",
-    "    # Получаю вектор-признаков\n",
-    "    features = extract_features_from_frame(frame_data, rgb_image)\n",
-    "    # Добавляю в общий список векторов-признаков\n",
-    "    all_features.extend(features)\n",
-    "\n",
-    "# Обучение k-means\n",
-    "kmeans_1 = sk.KMeans(n_clusters=2)\n",
-    "kmeans_1.fit(all_features)\n",
-    "\n",
-    "predict = []\n",
-    "for i in range(0, len(kmeans_1.labels_), 10):\n",
-    "    predict.append(kmeans_1.labels_[i:i+10])\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Создание Ground Truth словаря"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +331,102 @@
     "        team = player_info[\"team\"]\n",
     "        team_key = f\"team_{team}\"\n",
     "        gt[frame_id][team_key].append(player_id)\n",
-    "#print(gt)\n"
+    "#print(gt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Получение вектора признаков"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 270,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_features_task_1 = [] # Вектор признаков для Задания №1\n",
+    "all_features_task_2 = [] # Вектор признаков для Задания №2\n",
+    "all_features_task_3 = [] # Вектор признаков для Задания №3\n",
+    "all_features_task_4 = [] # Вектор признаков для Задания №4\n",
+    "\n",
+    "# Извлечение вектора признаков из bounding box`в всех фреймов\n",
+    "for frame_id, frame_data in data.items():\n",
+    "    image_path = f'team_classification_data/frames/{frame_id}.jpeg'\n",
+    "    features_rgb = [] # Вектор текущего кадра Задание №1\n",
+    "    features_hsv = [] # Вектор текущего кадра Задание №2\n",
+    "    features_rgb_hist = [] # Вектор текущего кадра Задание №3\n",
+    "    features_hsv_hist = [] # Вектор текущего кадра Задание №4\n",
+    "    \n",
+    "    # Текущий кадр из выборки Задание №1,3\n",
+    "    image_rgb = get_rbg_image_from_path(image_path)\n",
+    "    # Текущий кадр из выборки Задание №2,4\n",
+    "    image_hsv = get_hsv_image_from_path(image_path)\n",
+    "\n",
+    "    # Получаю вектор-признаков Задание №1\n",
+    "    features_rgb = extract_feature(frame_data, image_rgb)\n",
+    "    # Получаю вектор-признаков Задание №2\n",
+    "    features_hsv = extract_feature(frame_data, image_hsv)\n",
+    "    # Получаю вектор-признаков Задание №3\n",
+    "    features_rgb_hist = extract_features_hist(frame_data, image_rgb)\n",
+    "    # Получаю вектор-признаков Задание №4  \n",
+    "    features_hsv_hist = extract_features_hist(frame_data, image_hsv)\n",
+    "\n",
+    "    # Добавляю в общий список векторов-признаков по каждому заданию\n",
+    "    all_features_task_1.extend(features_rgb)\n",
+    "    all_features_task_2.extend(features_hsv)\n",
+    "    all_features_task_3.extend(features_rgb_hist)\n",
+    "    all_features_task_4.extend(features_hsv_hist)\n",
+    "\n",
+    "#print(all_features_task_1)\n",
+    "#print(all_features_task_2)\n",
+    "#print(all_features_task_3)\n",
+    "#print(all_features_task_4)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Обучение моделей"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predict_1 = [] # Оценка модели №1\n",
+    "predict_2 = [] # Оценка модели №2\n",
+    "predict_3 = [] # Оценка модели №3\n",
+    "predict_4 = [] # Оценка модели №4\n",
+    "\n",
+    "# Модель задания №1\n",
+    "kmeans_1 = sk.KMeans(n_clusters=2)\n",
+    "kmeans_1.fit(all_features_task_1)\n",
+    "for i in range(0, len(kmeans_1.labels_), 10):\n",
+    "    predict_1.append(kmeans_1.labels_[i:i+10])\n",
+    "\n",
+    "# Модель задания №2\n",
+    "kmeans_2 = sk.KMeans(n_clusters=2)\n",
+    "kmeans_2.fit(all_features_task_2)\n",
+    "for i in range(0, len(kmeans_2.labels_), 10):\n",
+    "    predict_2.append(kmeans_2.labels_[i:i+10])\n",
+    "\n",
+    "# Модель задания №3\n",
+    "kmeans_3 = sk.KMeans(n_clusters=2)\n",
+    "kmeans_3.fit(all_features_task_3)\n",
+    "for i in range(0, len(kmeans_3.labels_), 10):\n",
+    "    predict_3.append(kmeans_3.labels_[i:i+10])\n",
+    "\n",
+    "# Модель задания №2\n",
+    "kmeans_4 = sk.KMeans(n_clusters=2)\n",
+    "kmeans_4.fit(all_features_task_4)\n",
+    "for i in range(0, len(kmeans_4.labels_), 10):\n",
+    "    predict_4.append(kmeans_4.labels_[i:i+10])"
    ]
   },
   {
@@ -381,16 +438,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "predicted = {}\n",
+    "predicted_1 = {}\n",
+    "predicted_1 = {}\n",
+    "predicted_1 = {}\n",
+    "predicted_1 = {}\n",
     "index = 0\n",
+    "\n",
+    "\n",
     "\n",
     "# Сначала собираем все данные\n",
     "for frame_id, players in data.items():\n",
     "    # Инициализируем структуру для текущего кадра\n",
+    "    predicted[frame_id] = {\"team_0\": [], \"team_1\": []}\n",
+    "    predicted[frame_id] = {\"team_0\": [], \"team_1\": []}\n",
+    "    predicted[frame_id] = {\"team_0\": [], \"team_1\": []}\n",
     "    predicted[frame_id] = {\"team_0\": [], \"team_1\": []}\n",
     "    # Распределяем игроков по командам\n",
     "    for i in players:\n",
@@ -444,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +520,7 @@
     "    features = []\n",
     "    image_path = f'team_classification_data/frames/{frame_id}.jpeg'\n",
     "    # Получаю изображение\n",
-    "    hsv_image = get_hsv_image_from_path(image_path)\n",
+    "\n",
     "    # Получаю вектор-признаков\n",
     "    features = extract_features_from_frame(frame_data, hsv_image)\n",
     "    # Добавляю в общий список векторов-признаков\n",
@@ -542,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +618,7 @@
     "    features = []\n",
     "    image_path = f'team_classification_data/frames/{frame_id}.jpeg'\n",
     "    # Получаю изображение\n",
-    "    rgb_hist = get_rbg_image_from_path(image_path)\n",
+    "\n",
     "    # Получаю вектор-признаков\n",
     "    features = extract_features_from_histogram(frame_data, rgb_hist)\n",
     "    # Добавляю в общий список векторов-признаков\n",
@@ -606,14 +671,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " HSV Accuracy: 87.0 %\n"
+      " RGB_Hist Accuracy: 87.0 %\n"
      ]
     }
    ],
@@ -622,6 +687,34 @@
     "# predicted - словарь Классификатора\n",
     "hist_rgb_accuracy = round(calc_accuracy(gt,predicted),1)\n",
     "print(' RGB_Hist Accuracy:', hsv_accuracy, '%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_features = []\n",
+    "\n",
+    "# Извлечение вектора признаков из bounding box`в всех фреймов\n",
+    "for frame_id, frame_data in data.items():\n",
+    "    features = []\n",
+    "    image_path = f'team_classification_data/frames/{frame_id}.jpeg'\n",
+    "    # Получаю изображение\n",
+    "    rgb_hist = get_rbg_image_from_path(image_path)\n",
+    "    # Получаю вектор-признаков\n",
+    "    features = extract_features_from_histogram(frame_data, rgb_hist)\n",
+    "    # Добавляю в общий список векторов-признаков\n",
+    "    all_features.extend(features)\n",
+    "\n",
+    "# Обучение k-means\n",
+    "kmeans_3 = sk.KMeans(n_clusters=2)\n",
+    "kmeans_3.fit(all_features)\n",
+    "\n",
+    "predict = []\n",
+    "for i in range(0, len(kmeans_3.labels_), 10):\n",
+    "    predict.append(kmeans_3.labels_[i:i+10])"
    ]
   }
  ],
