--- a/Lesson 9/Homework/hmw_l9.ipynb
+++ b/Lesson 9/Homework/hmw_l9.ipynb
@@ -57,7 +57,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CUDA доступен: True\n",
+      "Версия CUDA: 12.6\n",
+      "Количество GPU: 1\n",
+      "Текущее устройство: 0\n",
+      "Имя GPU: NVIDIA GeForce RTX 4090\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Проверка, доступна ли CUDA\n",
+    "print(\"CUDA доступен:\", torch.cuda.is_available())\n",
+    "\n",
+    "# Проверка версии CUDA\n",
+    "print(\"Версия CUDA:\", torch.version.cuda)\n",
+    "\n",
+    "# Проверка количества доступных GPU\n",
+    "print(\"Количество GPU:\", torch.cuda.device_count())\n",
+    "\n",
+    "# Проверка текущего устройства (GPU)\n",
+    "if torch.cuda.is_available():\n",
+    "    print(\"Текущее устройство:\", torch.cuda.current_device())\n",
+    "    print(\"Имя GPU:\", torch.cuda.get_device_name(torch.cuda.current_device()))\n",
+    "else:\n",
+    "    print(\"GPU не обнаружено.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,16 +110,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\KharitWinPC\\AppData\\Roaming\\Python\\Python311\\site-packages\\albumentations\\core\\composition.py:250: UserWarning: Got processor for bboxes, but no transform to process it.\n",
+      "c:\\Users\\khari\\OneDrive\\Документы\\GirRep\\OtusCV\\.venv\\Lib\\site-packages\\albumentations\\core\\composition.py:250: UserWarning: Got processor for bboxes, but no transform to process it.\n",
       "  self._set_keys()\n",
-      "C:\\Users\\KharitWinPC\\AppData\\Roaming\\Python\\Python311\\site-packages\\albumentations\\core\\validation.py:87: UserWarning: ShiftScaleRotate is a special case of Affine transform. Please use Affine transform instead.\n",
+      "c:\\Users\\khari\\OneDrive\\Документы\\GirRep\\OtusCV\\.venv\\Lib\\site-packages\\albumentations\\core\\validation.py:87: UserWarning: ShiftScaleRotate is a special case of Affine transform. Please use Affine transform instead.\n",
       "  original_init(self, **validated_kwargs)\n"
      ]
     }
@@ -116,18 +152,20 @@
     "                A.Normalize(mean=[0, 0, 0], std=[1/255, 1/255, 1/255]),\n",
     "                ToTensorV2()\n",
     "            ],\n",
-    "                bbox_params=A.BboxParams(format='pascal_voc', label_fields=['labels'])),\n",
+    "                bbox_params=A.BboxParams(format='pascal_voc', label_fields=['labels'])\n",
+    ")\n",
     "\n",
     "no_aug = A.Compose([\n",
     "                A.Normalize(mean=[0, 0, 0], std=[1/255, 1/255, 1/255]),\n",
     "                ToTensorV2()\n",
     "            ],\n",
-    "                bbox_params=A.BboxParams(format='pascal_voc', label_fields=['labels']))\n"
+    "                bbox_params=A.BboxParams(format='pascal_voc', label_fields=['labels'])\n",
+    ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,48 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Датасеты\n",
-    "train_dataset = FabricDefectDataset(\n",
-    "    root=TRAIN_IMAGES,\n",
-    "    ann_file=TRAIN_ANN,\n",
-    "    transforms=no_aug)\n",
-    "\n",
-    "val_dataset = FabricDefectDataset(\n",
-    "    root=VAL_IMAGES,\n",
-    "    ann_file=VAL_ANN,\n",
-    "    transforms=no_aug)\n",
-    "\n",
-    "# DataLoaders\n",
-    "train_loader = DataLoader(\n",
-    "    train_dataset,\n",
-    "    batch_size=4,\n",
-    "    shuffle=True,\n",
-    "    collate_fn=collate_fn,\n",
-    "    num_workers=0,\n",
-    "    pin_memory=False\n",
-    ")\n",
-    "\n",
-    "val_loader = DataLoader(\n",
-    "    val_dataset,\n",
-    "    batch_size=2,\n",
-    "    collate_fn=collate_fn,\n",
-    "    num_workers=0,\n",
-    "    pin_memory=False\n",
-    ")\n",
-    "\n",
-    "# Инициализация модели\n",
-    "model = get_model()\n",
-    "optimizer = torch.optim.AdamW(model.parameters(), lr=1e-4)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -333,39 +330,60 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "=== Training with base augmentation ===\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\KharitWinPC\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\torchvision\\models\\_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\KharitWinPC\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\torchvision\\models\\_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=FasterRCNN_ResNet50_FPN_V2_Weights.COCO_V1`. You can also use `weights=FasterRCNN_ResNet50_FPN_V2_Weights.DEFAULT` to get the most up-to-date weights.\n",
-      "  warnings.warn(msg)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/10 | Loss: 7.52 | mAP: 0.073\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[13]\u001b[39m\u001b[32m, line 52\u001b[39m\n\u001b[32m     50\u001b[39m total_loss = \u001b[32m0.0\u001b[39m\n\u001b[32m     51\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m images, targets \u001b[38;5;129;01min\u001b[39;00m train_loader:\n\u001b[32m---> \u001b[39m\u001b[32m52\u001b[39m     loss = \u001b[43mtrain_step\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moptimizer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mimages\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtargets\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     53\u001b[39m     total_loss += loss\n\u001b[32m     55\u001b[39m \u001b[38;5;66;03m# Валидация\u001b[39;00m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 20\u001b[39m, in \u001b[36mtrain_step\u001b[39m\u001b[34m(model, optimizer, images, targets)\u001b[39m\n\u001b[32m     17\u001b[39m losses = \u001b[38;5;28msum\u001b[39m(loss \u001b[38;5;28;01mfor\u001b[39;00m loss \u001b[38;5;129;01min\u001b[39;00m loss_dict.values())\n\u001b[32m     19\u001b[39m optimizer.zero_grad()\n\u001b[32m---> \u001b[39m\u001b[32m20\u001b[39m \u001b[43mlosses\u001b[49m\u001b[43m.\u001b[49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     21\u001b[39m optimizer.step()\n\u001b[32m     23\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m losses.item()\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\KharitWinPC\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\torch\\_tensor.py:626\u001b[39m, in \u001b[36mTensor.backward\u001b[39m\u001b[34m(self, gradient, retain_graph, create_graph, inputs)\u001b[39m\n\u001b[32m    616\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m has_torch_function_unary(\u001b[38;5;28mself\u001b[39m):\n\u001b[32m    617\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m handle_torch_function(\n\u001b[32m    618\u001b[39m         Tensor.backward,\n\u001b[32m    619\u001b[39m         (\u001b[38;5;28mself\u001b[39m,),\n\u001b[32m   (...)\u001b[39m\u001b[32m    624\u001b[39m         inputs=inputs,\n\u001b[32m    625\u001b[39m     )\n\u001b[32m--> \u001b[39m\u001b[32m626\u001b[39m \u001b[43mtorch\u001b[49m\u001b[43m.\u001b[49m\u001b[43mautograd\u001b[49m\u001b[43m.\u001b[49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    627\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgradient\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minputs\u001b[49m\u001b[43m=\u001b[49m\u001b[43minputs\u001b[49m\n\u001b[32m    628\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\KharitWinPC\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\torch\\autograd\\__init__.py:347\u001b[39m, in \u001b[36mbackward\u001b[39m\u001b[34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[39m\n\u001b[32m    342\u001b[39m     retain_graph = create_graph\n\u001b[32m    344\u001b[39m \u001b[38;5;66;03m# The reason we repeat the same comment below is that\u001b[39;00m\n\u001b[32m    345\u001b[39m \u001b[38;5;66;03m# some Python versions print out the first line of a multi-line function\u001b[39;00m\n\u001b[32m    346\u001b[39m \u001b[38;5;66;03m# calls in the traceback and some print out the last line\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m347\u001b[39m \u001b[43m_engine_run_backward\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    348\u001b[39m \u001b[43m    \u001b[49m\u001b[43mtensors\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    349\u001b[39m \u001b[43m    \u001b[49m\u001b[43mgrad_tensors_\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    350\u001b[39m \u001b[43m    \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    351\u001b[39m \u001b[43m    \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    352\u001b[39m \u001b[43m    \u001b[49m\u001b[43minputs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    353\u001b[39m \u001b[43m    \u001b[49m\u001b[43mallow_unreachable\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[32m    354\u001b[39m \u001b[43m    \u001b[49m\u001b[43maccumulate_grad\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[32m    355\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\KharitWinPC\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\torch\\autograd\\graph.py:823\u001b[39m, in \u001b[36m_engine_run_backward\u001b[39m\u001b[34m(t_outputs, *args, **kwargs)\u001b[39m\n\u001b[32m    821\u001b[39m     unregister_hooks = _register_logging_hooks_on_whole_graph(t_outputs)\n\u001b[32m    822\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m823\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mVariable\u001b[49m\u001b[43m.\u001b[49m\u001b[43m_execution_engine\u001b[49m\u001b[43m.\u001b[49m\u001b[43mrun_backward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# Calls into the C++ engine to run the backward pass\u001b[39;49;00m\n\u001b[32m    824\u001b[39m \u001b[43m        \u001b[49m\u001b[43mt_outputs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\n\u001b[32m    825\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# Calls into the C++ engine to run the backward pass\u001b[39;00m\n\u001b[32m    826\u001b[39m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[32m    827\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m attach_logging_hooks:\n",
-      "\u001b[31mKeyboardInterrupt\u001b[39m: "
+      "=== Training with base augmentation ===\n",
+      "Epoch 1/10 | Loss: 8.51 | mAP: 0.132\n",
+      "Epoch 2/10 | Loss: 4.40 | mAP: 0.142\n",
+      "Epoch 3/10 | Loss: 4.94 | mAP: 0.147\n",
+      "Epoch 4/10 | Loss: 3.99 | mAP: 0.083\n",
+      "Epoch 5/10 | Loss: 3.73 | mAP: 0.134\n",
+      "Epoch 6/10 | Loss: 3.52 | mAP: 0.138\n",
+      "Epoch 7/10 | Loss: 4.03 | mAP: 0.199\n",
+      "Epoch 8/10 | Loss: 3.96 | mAP: 0.204\n",
+      "Epoch 9/10 | Loss: 3.18 | mAP: 0.193\n",
+      "Epoch 10/10 | Loss: 3.31 | mAP: 0.224\n",
+      "\n",
+      "=== Training with color augmentation ===\n",
+      "Epoch 1/10 | Loss: 10.12 | mAP: 0.088\n",
+      "Epoch 2/10 | Loss: 5.37 | mAP: 0.038\n",
+      "Epoch 3/10 | Loss: 4.45 | mAP: 0.050\n",
+      "Epoch 4/10 | Loss: 4.14 | mAP: 0.080\n",
+      "Epoch 5/10 | Loss: 3.85 | mAP: 0.199\n",
+      "Epoch 6/10 | Loss: 3.05 | mAP: 0.175\n",
+      "Epoch 7/10 | Loss: 2.93 | mAP: 0.115\n",
+      "Epoch 8/10 | Loss: 2.92 | mAP: 0.142\n",
+      "Epoch 9/10 | Loss: 2.60 | mAP: 0.098\n",
+      "Epoch 10/10 | Loss: 2.44 | mAP: 0.157\n",
+      "\n",
+      "=== Training with geo augmentation ===\n",
+      "Epoch 1/10 | Loss: 7.74 | mAP: 0.042\n",
+      "Epoch 2/10 | Loss: 4.54 | mAP: 0.057\n",
+      "Epoch 3/10 | Loss: 4.87 | mAP: 0.091\n",
+      "Epoch 4/10 | Loss: 3.88 | mAP: 0.139\n",
+      "Epoch 5/10 | Loss: 4.03 | mAP: 0.112\n",
+      "Epoch 6/10 | Loss: 4.61 | mAP: 0.124\n",
+      "Epoch 7/10 | Loss: 4.18 | mAP: 0.121\n",
+      "Epoch 8/10 | Loss: 3.59 | mAP: 0.159\n",
+      "Epoch 9/10 | Loss: 3.29 | mAP: 0.132\n",
+      "Epoch 10/10 | Loss: 3.48 | mAP: 0.157\n",
+      "\n",
+      "=== Training with none augmentation ===\n",
+      "Epoch 1/10 | Loss: 10.27 | mAP: 0.043\n",
+      "Epoch 2/10 | Loss: 5.72 | mAP: 0.101\n",
+      "Epoch 3/10 | Loss: 4.09 | mAP: 0.177\n",
+      "Epoch 4/10 | Loss: 4.06 | mAP: 0.176\n",
+      "Epoch 5/10 | Loss: 3.33 | mAP: 0.155\n",
+      "Epoch 6/10 | Loss: 2.83 | mAP: 0.245\n",
+      "Epoch 7/10 | Loss: 2.55 | mAP: 0.148\n",
+      "Epoch 8/10 | Loss: 2.75 | mAP: 0.212\n",
+      "Epoch 9/10 | Loss: 2.57 | mAP: 0.141\n",
+      "Epoch 10/10 | Loss: 2.21 | mAP: 0.136\n",
+      "\n",
+      "=== Final Results ===\n",
+      "            mAP\n",
+      "base   0.223766\n",
+      "color  0.199476\n",
+      "geo    0.159054\n",
+      "none   0.244697\n"
      ]
     }
    ],
@@ -439,37 +457,6 @@
     "# Результаты\n",
     "print(\"\\n=== Final Results ===\")\n",
     "print(pd.DataFrame.from_dict(results, orient='index', columns=['mAP']))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch size: 4\n",
-      "Image shape: torch.Size([3, 1280, 960])\n",
-      "Boxes shape: torch.Size([1, 4])\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Тестирование загрузки данных\n",
-    "for images, targets in train_loader:\n",
-    "    print(f\"Batch size: {len(images)}\")\n",
-    "    print(f\"Image shape: {images[0].shape}\")  # Должно быть [3, H, W]\n",
-    "    print(f\"Boxes shape: {targets[0]['boxes'].shape}\")  # [N, 4]\n",
-    "    break"
    ]
   }
  ],
