--- a/Lesson 13/Homework/hmw_l13.ipynb
+++ b/Lesson 13/Homework/hmw_l13.ipynb
@@ -47,13 +47,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "a3a38063",
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_dir = 'imagenette2-160/train'\n",
-    "val_dir = 'imagenette2-160/val'"
+    "train_dir = 'DataForModel/imagenette2-320/train'\n",
+    "val_dir = 'DataForModel/imagenette2-320/val'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "95fdc613",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'DataForModel/imagenette2-320/train'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_dir"
    ]
   }
  ],
