--- a/Lesson 13/Homework/hmw_l13.ipynb
+++ b/Lesson 13/Homework/hmw_l13.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 144,
    "id": "5f12f00f",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,6 @@
     "import torch.nn as nn\n",
     "import torchvision\n",
     "import torchvision.transforms as transforms\n",
-    "import matplotlib.pyplot as plt\n",
     "from tqdm import tqdm"
    ]
   },
@@ -58,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 145,
    "id": "a3a38063",
    "metadata": {},
    "outputs": [
@@ -68,7 +67,7 @@
        "device(type='cpu')"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 146,
    "id": "7980ca7e",
    "metadata": {},
    "outputs": [],
@@ -122,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 156,
    "id": "63df6322",
    "metadata": {},
    "outputs": [],
@@ -136,6 +135,58 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0c20b2d0",
+   "metadata": {},
+   "source": [
+    "### 1.4 Определение фунций обучения и расчета точности модели"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "463b8f3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Расчет точности\n",
+    "def evaluate(model, val_loader):\n",
+    "    model.eval() \n",
+    "    correct = 0\n",
+    "    total = 0\n",
+    "    with torch.no_grad():\n",
+    "        for images, labels in val_loader:\n",
+    "            images, labels = images.to(DEVICE), labels.to(DEVICE)\n",
+    "            outputs = model(images)\n",
+    "            _, predicted = torch.max(outputs.data, 1)\n",
+    "            total += labels.size(0)\n",
+    "            correct += (predicted == labels).sum().item()\n",
+    "    return 100 * correct / total\n",
+    "\n",
+    "def model_train(model, train_data, valid_data, optimizer, criterion, name='undefined', save_fc=False):\n",
+    "    for epoch in range(NUM_EPOCHS):\n",
+    "        last_acc = 0.0\n",
+    "        model.train()\n",
+    "        running_loss = 0.0\n",
+    "        for inputs, labels in tqdm(train_data, desc=f'Epoch {epoch+1}'):\n",
+    "            inputs, labels = inputs.to(DEVICE), labels.to(DEVICE)\n",
+    "            optimizer.zero_grad()\n",
+    "            outputs = model(inputs)\n",
+    "            loss = criterion(outputs, labels)\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            running_loss += loss.item()\n",
+    "\n",
+    "        # Валидация\n",
+    "        acc = evaluate(model, valid_data)\n",
+    "        if acc > last_acc:\n",
+    "            last_acc = acc\n",
+    "            if save_fc:\n",
+    "                torch.save(model.fc.state_dict(), f'{name}.pth')\n",
+    "    return model, last_acc "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8ce94940",
    "metadata": {},
    "source": [
@@ -144,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 158,
    "id": "fdf08abe",
    "metadata": {},
    "outputs": [],
@@ -177,28 +228,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
-   "id": "e0d1d07d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Расчет точности\n",
-    "def evaluate(model, val_loader):\n",
-    "    model.eval() \n",
-    "    correct = 0\n",
-    "    total = 0\n",
-    "    with torch.no_grad():\n",
-    "        for images, labels in val_loader:\n",
-    "            images, labels = images.to(DEVICE), labels.to(DEVICE)\n",
-    "            outputs = model(images)\n",
-    "            _, predicted = torch.max(outputs.data, 1)\n",
-    "            total += labels.size(0)\n",
-    "            correct += (predicted == labels).sum().item()\n",
-    "    return 100 * correct / total"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "d6f1f5d0",
    "metadata": {},
@@ -208,25 +237,7 @@
     "optimizer = torch.optim.Adam(model.fc.parameters(), lr=0.0001)\n",
     "base_acc = 0.0\n",
     "\n",
-    "for epoch in range(NUM_EPOCHS):\n",
-    "    # Обучение\n",
-    "    model.train()\n",
-    "    running_loss = 0.0\n",
-    "    for inputs, labels in tqdm(imagenette_train, desc=f'Epoch {epoch+1}'):\n",
-    "        inputs, labels = inputs.to(DEVICE), labels.to(DEVICE)\n",
-    "        optimizer.zero_grad()\n",
-    "        outputs = model(inputs)\n",
-    "        loss = criterion(outputs, labels)\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "        running_loss += loss.item()\n",
-    "\n",
-    "    # Валидация\n",
-    "    acc = evaluate(model, imagenette_val)\n",
-    "    if acc > base_acc:\n",
-    "        base_acc = acc\n",
-    "        torch.save(model.fc.state_dict(), 'imagenette_fc.pth')\n",
-    "\n",
+    "model, base_acc = model_train(model, imagenette_train, imagenette_val, optimizer, criterion,'imagenette_fc', True)\n",
     "print(f\"Базовая точность: {base_acc:.2f}%\")"
    ]
   },
@@ -247,25 +258,8 @@
    "source": [
     "cifar_acc = 0.0\n",
     "\n",
-    "for epoch in range(NUM_EPOCHS):\n",
-    "    # Обучение\n",
-    "    model.train()\n",
-    "    running_loss = 0.0\n",
-    "    for inputs, labels in tqdm(cifar_train, desc=f'Epoch {epoch+1}'):\n",
-    "        inputs, labels = inputs.to(DEVICE), labels.to(DEVICE)\n",
-    "        optimizer.zero_grad()\n",
-    "        outputs = model(inputs)\n",
-    "        loss = criterion(outputs, labels)\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "        running_loss += loss.item()\n",
-    "\n",
-    "    # Валидация\n",
-    "    acc = evaluate(model, cifar_val)\n",
-    "    if acc > cifar_acc:\n",
-    "        cifar_acc = acc\n",
-    "\n",
-    "print(f\"CIFAR точность: {cifar_acc:.2f}%\")\n"
+    "model, cifar_acc = model_train(model, imagenette_train, imagenette_val, optimizer, criterion, save_fc= True)\n",
+    "print(f\"CIFAR точность: {cifar_acc:.2f}%\")"
    ]
   },
   {
@@ -360,25 +354,10 @@
    "source": [
     "last_acc = 0.0\n",
     "\n",
-    "for epoch in range(NUM_EPOCHS):\n",
-    "    # Обучение\n",
-    "    model.train()\n",
-    "    running_loss = 0.0\n",
-    "    for inputs, labels in tqdm(imagenette_train, desc=f'Epoch {epoch+1}'):\n",
-    "        inputs, labels = inputs.to(DEVICE), labels.to(DEVICE)\n",
-    "        optimizer.zero_grad()\n",
-    "        outputs = model(inputs)\n",
-    "        loss = criterion(outputs, labels)\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "        running_loss += loss.item()\n",
+    "model, last_acc = model_train(model, imagenette_train, imagenette_val, optimizer, criterion, save_fc=False)\n",
     "\n",
-    "    # Валидация\n",
-    "    acc = evaluate(model, imagenette_val)\n",
-    "    if acc > last_acc:\n",
-    "        last_acc = acc\n",
-    "\n",
-    "print(f\"Попытка вернуть точность: {cifar_acc:.2f}%\")"
+    "print(f\"Базовая точность: {base_acc:.2f}%\")\n",
+    "print(f\"Попытка вернуть точность: {last_acc:.2f}%\")"
    ]
   },
   {
