--- a/Lesson 13/Homework/hmw_l13.ipynb
+++ b/Lesson 13/Homework/hmw_l13.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 159,
    "id": "5f12f00f",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 160,
    "id": "a3a38063",
    "metadata": {},
    "outputs": [
@@ -67,7 +67,7 @@
        "device(type='cpu')"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 161,
    "id": "7980ca7e",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 176,
    "id": "63df6322",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
     "train_dataset_cifar = torchvision.datasets.CIFAR10(root=TRAIN_DIR_CIFAR10, train=True, download=True, transform=transform)\n",
     "val_dataset_cifar = torchvision.datasets.CIFAR10(root=VAL_DIR_CIFAR10, train=False, download=True, transform=transform)\n",
     "\n",
-    "cifar_train = torch.utils.data.DataLoader(train_dataset_cifar, BATCH_SIZE, shuffle=True), \n",
+    "cifar_train = torch.utils.data.DataLoader(train_dataset_cifar, BATCH_SIZE, shuffle=True)\n",
     "cifar_val = torch.utils.data.DataLoader(val_dataset_cifar, BATCH_SIZE)"
    ]
   },
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 174,
    "id": "463b8f3f",
    "metadata": {},
    "outputs": [],
@@ -162,7 +162,9 @@
     "            correct += (predicted == labels).sum().item()\n",
     "    return 100 * correct / total\n",
     "\n",
-    "def model_train(model, train_data, valid_data, optimizer, criterion, name='undefined', save_fc=False):\n",
+    "def model_train(model, train_data, valid_data, name='undefined', save_fc=False):\n",
+    "    criterion = nn.CrossEntropyLoss()\n",
+    "    optimizer = torch.optim.Adam(model.fc.parameters(), lr=0.0001)\n",
     "    for epoch in range(NUM_EPOCHS):\n",
     "        last_acc = 0.0\n",
     "        model.train()\n",
@@ -195,10 +197,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 164,
    "id": "fdf08abe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\KharitWinPC\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\torchvision\\models\\_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\KharitWinPC\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\torchvision\\models\\_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=ResNet18_Weights.IMAGENET1K_V1`. You can also use `weights=ResNet18_Weights.DEFAULT` to get the most up-to-date weights.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    }
+   ],
    "source": [
     "model = torchvision.models.resnet18(pretrained=True)\n",
     "for param in model.parameters():\n",
@@ -228,10 +241,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 165,
    "id": "d6f1f5d0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1: 100%|██████████| 296/296 [04:10<00:00,  1.18it/s]\n",
+      "Epoch 2: 100%|██████████| 296/296 [04:00<00:00,  1.23it/s]\n",
+      "Epoch 3: 100%|██████████| 296/296 [03:53<00:00,  1.27it/s]\n",
+      "Epoch 4: 100%|██████████| 296/296 [03:56<00:00,  1.25it/s]\n",
+      "Epoch 5: 100%|██████████| 296/296 [03:33<00:00,  1.39it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Базовая точность: 97.15%\n"
+     ]
+    }
+   ],
    "source": [
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = torch.optim.Adam(model.fc.parameters(), lr=0.0001)\n",
@@ -258,7 +290,7 @@
    "source": [
     "cifar_acc = 0.0\n",
     "\n",
-    "model, cifar_acc = model_train(model, imagenette_train, imagenette_val, optimizer, criterion, save_fc= True)\n",
+    "model, cifar_acc = model_train(model, cifar_train, cifar_val, save_fc=False)\n",
     "print(f\"CIFAR точность: {cifar_acc:.2f}%\")"
    ]
   },
@@ -285,7 +317,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "model.fc.load_state_dict(torch.load('imagenette_fc.pth'))"
    ]
   },
@@ -354,7 +385,7 @@
    "source": [
     "last_acc = 0.0\n",
     "\n",
-    "model, last_acc = model_train(model, imagenette_train, imagenette_val, optimizer, criterion, save_fc=False)\n",
+    "model, last_acc = model_train(model, imagenette_train, imagenette_val, save_fc=False)\n",
     "\n",
     "print(f\"Базовая точность: {base_acc:.2f}%\")\n",
     "print(f\"Попытка вернуть точность: {last_acc:.2f}%\")"
